--- a/documentation-site/styles/global.css
+++ b/documentation-site/styles/global.css
@@ -7,6 +7,9 @@ a {
   text-decoration: none;
   color: inherit;
 }
+* {
+  box-sizing: border-box;
+}
 
 ::-moz-selection {
   /* Code for Firefox */
