--- a/documentation-site/styles/global.css
+++ b/documentation-site/styles/global.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;700;800;900&display=swap");
 html,
 body {
   margin: 0;
@@ -21,7 +22,6 @@ a {
   color: white;
   background: rgba(0, 93, 250, 0.99);
 }
-
 
 /* react-shadow-picker */
 .shadow-picker {
