framer: show spacing backgrounds

--- a/lighthouse-gallery.framerfx/code/overrides/tokens.css
+++ b/lighthouse-gallery.framerfx/code/overrides/tokens.css
@@ -1,6 +1,6 @@
 :root,
 .__lh-light-theme {
-  /* --lh-guide-spacing: hsl(100, 37%, 79%); */
+  --lh-guide-spacing: hsl(100, 37%, 79%);
 }
 
 .__lh-dark-theme {
